@@ -5,7 +5,7 @@
  # extended & maintained by Itzchak Rehberg <izzysoft AT qumran DOT org>     #
  # http://www.izzysoft.de/                                                   #
  # ------------------------------------------------------------------------- #
- # Checking class imdb_charts                                                #
+ # Checking class imdb_trailers                                              #
  # ------------------------------------------------------------------------- #
  # This program is free software; you can redistribute and/or modify it      #
  # under the terms of the GNU General Public License (see doc/LICENSE)       #
@@ -13,11 +13,14 @@
 
  /* $Id$ */
 
-require_once("imdb_charts.class.php");
+require_once("imdb.class.php");
+require_once("imdb_trailers.class.php");
 require_once(dirname(__FILE__)."/helpers.inc");
-$imdb = new imdb_topcharts;
 
-echo "<H3>Checking class imdb_topcharts...</H3>\n";
+$showtrailer = new imdb_trailers();
+$imdb = new imdb("0117571"); // page with AllTrailers trailer
+
+echo "<H3>Checking class imdb_trailers...</H3>\n";
 
 $imdb->cachedir = "../cache";
 switch ($_REQUEST["cache"]) {
@@ -33,16 +36,27 @@ switch ($_REQUEST["cache"]) {
                 break;
 }
 
-echo " <LI>method getChartsTop10(): ";
-$res = $imdb->getChartsTop10();
-if (count($res)<10||empty($res[0])) fail();
+echo " <LI>method getFlashCodeAllTrailers(): ";
+$arraytrailers = $imdb->trailers(); // array of URLs
+foreach ($arraytrailers as $trail_url) {
+  $url = strtolower($trail_url);
+  if (strpos($url,"alltrailers.net")!==FALSE) // AllTrailers.Net
+    $res = $showtrailer->getFlashCodeAllTrailers($trail_url);
+}
+if (count($res)<1||empty($res[0])) fail();
 else pass();
 echo "</LI>\n";
 ++$GLOBALS["methods"];
 
-echo " <LI>method getChartsTop10(): ";
-$res = $imdb->getChartsBoxOffice();
-if (count($res)<10||empty($res[0][0])) fail();
+echo " <LI>method getFlashCodeMovieMaze(): ";
+$imdb->setid("0758774"); // page with MovieMaze trailers
+$arraytrailers = $imdb->trailers(); // array of URLs
+foreach ($arraytrailers as $trail_url) {
+  $url = strtolower($trail_url);
+  if ( strpos($url,"www.moviemaze.de")!==FALSE ) // moviemaze URL
+    $res = $showtrailer->getFlashCodeMovieMaze($trail_url);
+}
+if (count($res)<10||empty($res[0])) fail();
 else pass();
 echo "</LI>\n";
 ++$GLOBALS["methods"];
