@@ -1,6 +1,7 @@
 v1.0.9
 -------------------
 + added the imdb_topcharts and imdb_nowplaying classes provided by banzap
++ added imdb_trailers class (rewrite of code provided by banzap)
 
 v1.0.8 (17.09.2008)
 -------------------
